--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "express-paginate": "^1.0.2",
     "http": "^0.0.1-security",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.1",
     "morgan": "^1.10.0",
